--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <title>Drag & Drop</title>
 </head>
 <body>
-    <div class="empty"></div>
-    <div class="fill" draggable="true"></div>
+    <div class="empty">
+        <div class="fill" draggable="true"></div>
+    </div>
     <div class="empty"></div>
     <div class="empty"></div>
     <div class="empty"></div>
